# simple_chat_application

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
infra/: Cargo.toml
infra/src/: lib.rs  logging.rs  test_utils.rs
infra/src/cache/: mod.rs
infra/src/db/: mod.rs  models.rs  queries.rs
infra/src/db/tests/: mod.rs  test_room.rs
migrations/: 20251118201157_create_room.sql  20251120162311_change_created_at_room.sql  20251126142900_create_messge.sql  20251126143412_add_created_at_to_message.sql
server/: Cargo.toml
server/src/: main.rs  models.rs  rate_limiter.rs  test_utils.rs  utils.rs
server/src/handlers/: common.rs  mod.rs  room.rs
shared/: Cargo.toml
shared/src/: models.rs  types.rs
src/: constants.rs  main.rs  types.rs  utils.rs
src/db/: mod.rs  models.rs
src/handlers/: mod.rs
