[package]
name = "simple_chat_application"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
