[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
infra = { path = "../infra" }
shared = { path = "../shared" }
